# amanami

./: .gitignore  Cargo.toml  README.md  cadangan.bak
config/: config.yaml.example
crates/amanami/: Cargo.toml
crates/amanami/src/: aws.rs  cli.rs  config.rs  errors.rs  grafana.rs  lib.rs  output.rs
crates/amanami/src/aws/: autoscaling.rs  config.rs  ec2.rs  eks.rs  iam.rs  ssm.rs
crates/amanami/src/cli/: args.rs  cli.rs  cmd.rs  styles.rs
crates/amanami/src/config/: app.rs
crates/amanami/src/errors/: aws.rs
crates/amanami/src/errors/aws/: eks.rs
crates/amanami/src/output/: table.rs
crates/aws/: Cargo.toml
lib/aws/: Cargo.toml
lib/aws/src/: config.rs
old/bleki/aws/ec2/: Cargo.toml
old/bleki/aws/ec2/src/: ec2.rs
old/bleki/aws/eks/: Cargo.toml
old/bleki/aws/eks/src/: eks.rs  lib.rs
old/bleki/aws/ssm/src/: ssm.rs
old/bleki/config/: Cargo.toml
old/bleki/config/src/: config.rs  lib.rs
old/bleki/output/table/: Cargo.toml
old/bleki/output/table/src/: table.rs
src/bleki/aws/autoscaling/: Cargo.toml
src/bleki/aws/autoscaling/src/: autoscaling.rs  lib.rs
src/bleki/aws/config/: Cargo.toml
src/bleki/aws/config/src/: config.rs
src/bleki/aws/ec2/src/: lib.rs
src/bleki/aws/ssm/: Cargo.toml
src/bleki/aws/ssm/src/: lib.rs
src/bleki/output/table/src/: lib.rs
