[package]
name = "amanami"
description = "A simple CLI application to check available updates for a certain things"
version = "0.1.0"
homepage = ""
documentation = ""
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "amanami"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1"
anyhow = "1"
clap = { version = "4.5", features = ["std", "derive", "help", "usage"] }