[package]
name = "bleki-aws-ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.20"
tokio = { version = "1", features = ["full"] }